# paiRIP

./: .gitignore  LICENSE  README.md  helo.txt  main.py  pyproject.toml  pyrip.py  rip.py  riptool.py
.utils/: crc.py  crc_faker_dseek.py
assets/: classes0.dex
assets/mob/: Logger.java  Logger.smali
assets/mt/: Objectlogger.smali
pyrip/: __main__.py  apkeditor.py  cli.py  utils.py
utils/: crc.py  crc_faker.py
