[project]
name = "pyrip"
version = "0.1.0"
description = "A lightweight modding utility script (not a virus)"
authors = [
    { name = "Mob", email = "0x9b42@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
pyrip = "pyrip.cli:rip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
